Update beer list. Change social icons to fontawesome. Increase sponsor scroll speed

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -43,11 +43,12 @@
         <a class="twitter-timeline" data-width="300" data-height="350" data-theme="light" href="https://twitter.com/dbf_beer?ref_src=twsrc%5Etfw">Tweets by dbf_beer</a>
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </twitter-widget>
-    <h4>Press <a href="https://www.youtube.com/watch?v=BdoGr0ocBT4" class="youtubePopup"><span class="glyphicon glyphicon-play-circle"></span></a> to watch our video, or check out our social offerings</h4>
+    <h4>Press <a href="https://www.youtube.com/watch?v=BdoGr0ocBT4" class="youtubePopup"><i class="fas fa-video"></i></a> to watch our video, or check out our social offerings</h4>
     <p style="font-size:30px">
-        <a href="https://twitter.com/dbf_beer"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
-        <a href="https://www.facebook.com/pages/Didsbury-Beer-Festival/353791738079986"><i id="jv-facebook_alt" class="jv-facebook_alt"></i></a>
-        <a href="http://www.flickr.com/photos/65526946@N08/"><i id="jv-flickr" class="jv-flickr"></i></a>
-        <a href="http://www.youtube.com/user/Didsburybeerfestival"><i id="jv-youtube" class="jv-youtube"></i></a>
+        <a href="https://twitter.com/dbf_beer"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.facebook.com/pages/Didsbury-Beer-Festival/353791738079986"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/didsburybeerfestival/"><i class="fab fa-instagram"></i></a>
+        <a href="http://www.flickr.com/photos/65526946@N08/"><i class="fab fa-flickr"></i></a>
+        <a href="http://www.youtube.com/user/Didsburybeerfestival"><i class="fab fa-youtube"></i></a>
     </p>
 </div>
