--- a/app/views/music.html
+++ b/app/views/music.html
@@ -8,7 +8,7 @@
         <p>It is recognised that singing can improve your brain activity, wellbeing and mood.   The Alzheimer’s Society Singing for the Brain sessions use singing to bring people with dementia together in a friendly and stimulating activity.  This local group invites you to join them in singing a variety of familiar songs.</p>
         <p style="font-size:30px">
             <a href="https://www.alzheimers.org.uk/get-support/your-support-services/singing-for-the-brain"><span>Website</span></a>
-            <a href="https://twitter.com/AlzSocNWEngland"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
+            <a href="https://twitter.com/AlzSocNWEngland"><i class="fab fa-twitter"></i></a>
             <a href="http://facebook.com/AlzheimersSocietyNorthWest"><i id="jv-facebook_alt"
                     class="jv-facebook_alt"></i></a>
         </p>
@@ -18,7 +18,7 @@
         <span class="smallPrint">21:00 - 21:45</span>
         <p>Blues, grunge and rock</p>
         <p style="font-size:30px">
-            <a href="https://twitter.com/tomhingleymusic"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
+            <a href="https://twitter.com/tomhingleymusic"><i class="fab fa-twitter"></i></a>
         <a href="https://www.facebook.com/TomHingleyMusic/"><i id="jv-facebook_alt"
             class="jv-facebook_alt"></i></a>
         </p>
@@ -29,7 +29,7 @@
         <p>An acoustic music group covering bluegrass, irish and country genres </p>
         <!-- <img width="100%" src="images/bands/paddleFaster.jpg"> -->
         <p style="font-size:30px">
-            <a href="https://twitter.com/TilterWheel"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
+            <a href="https://twitter.com/TilterWheel"><i class="fab fa-twitter"></i></a>
             <a href="https://www.facebook.com/pg/Ólta-603176353193572/about/?ref=page_internal"><i id="jv-facebook_alt"
                     class="jv-facebook_alt"></i></a>
         </p>
@@ -42,7 +42,7 @@
         <span class="smallPrint">19:00 - 20:00</span>
         <p>Jazz & blues singer/pianist</p>
         <p style="font-size:30px">
-            <a href="https://twitter.com/JeremySassoon"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
+            <a href="https://twitter.com/JeremySassoon"><i class="fab fa-twitter"></i></a>
             <a href="https://www.facebook.com/pg/jeremysassoon/about/?ref=page_internal"><i id="jv-facebook_alt"
                     class="jv-facebook_alt"></i></a>
         </p>
@@ -52,7 +52,7 @@
         <span class="smallPrint">20:30 - 21:30</span>
         <p>‘Funked It Up' are a collective of pro musicians from Greater Manchester who deliver Funk, Northern Soul, Motown and other genres...that we've funked up!</p>
         <p style="font-size:30px">
-            <a href="https://twitter.com/funkeditupuk "><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
+            <a href="https://twitter.com/funkeditupuk "><i class="fab fa-twitter"></i></a>
             <a href="https://www.facebook.com/pg/funkeditupuk/about/?ref=page_internal"><i id="jv-facebook_alt"
                     class="jv-facebook_alt"></i></a>
         </p>
@@ -62,7 +62,7 @@
         <span class="smallPrint">22:00 - 23:00</span>
         <p>Chicago blues to get you off your seat</p>
         <p style="font-size:30px">
-            <a href="https://twitter.com/jamesoharaband"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
+            <a href="https://twitter.com/jamesoharaband"><i class="fab fa-twitter"></i></a>
             <a href="https://www.facebook.com/pg/JamesOHaraBlues/about/?ref=page_internal"><i id="jv-facebook_alt"
                     class="jv-facebook_alt"></i></a>
         </p>
@@ -75,7 +75,7 @@
         <span class="smallPrint">13:00 - 15:00</span>
         <p>Swingin' affair is a Manchester based 25 piece big band</p>
         <p style="font-size:30px">
-            <a href="https://twitter.com/SwinginAffair"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
+            <a href="https://twitter.com/SwinginAffair"><i class="fab fa-twitter"></i></a>
             <a href="https://www.facebook.com/pg/SwinginAffair/about/?ref=page_internal"><i id="jv-facebook_alt"
                     class="jv-facebook_alt"></i></a>
         </p>
@@ -95,7 +95,7 @@
         <span class="smallPrint">21:30 - 23:00</span>
         <p>A marvelously cinematic, atmospheric and energy-filled live band.</p>
         <p style="font-size:30px">
-            <a href="https://twitter.com/FishesSleeping"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
+            <a href="https://twitter.com/FishesSleeping"><i class="fab fa-twitter"></i></a>
             <a href="https://www.facebook.com/pg/Sleeping-With-The-Fishes-138136866269031/about/?ref=page_internal"><i id="jv-facebook_alt"
                     class="jv-facebook_alt"></i></a>
         </p>
