Change styling of social icons, and fix missing icons on music page

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,6 +10,10 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
     display: none;
 }
 
+i{
+    color:#131f6b!important;
+}
+
 .browsehappy {
     margin: 0.2em 0;
     background: #ccc;
