--- a/app/views/music.html
+++ b/app/views/music.html
@@ -9,8 +9,7 @@
         <p style="font-size:30px">
             <a href="https://www.alzheimers.org.uk/get-support/your-support-services/singing-for-the-brain"><span>Website</span></a>
             <a href="https://twitter.com/AlzSocNWEngland"><i class="fab fa-twitter"></i></a>
-            <a href="http://facebook.com/AlzheimersSocietyNorthWest"><i id="jv-facebook_alt"
-                    class="jv-facebook_alt"></i></a>
+            <a href="http://facebook.com/AlzheimersSocietyNorthWest"><i class="fab fa-facebook-f"></i></a>
         </p>
     </div>
     <div class="bandDiv">
@@ -19,8 +18,7 @@
         <p>Blues, grunge and rock</p>
         <p style="font-size:30px">
             <a href="https://twitter.com/tomhingleymusic"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.facebook.com/TomHingleyMusic/"><i id="jv-facebook_alt"
-            class="jv-facebook_alt"></i></a>
+        <a href="https://www.facebook.com/TomHingleyMusic/"><i class="fab fa-facebook-f"></i></a>
         </p>
     </div>
     <div class="bandDiv">
@@ -30,8 +28,7 @@
         <!-- <img width="100%" src="images/bands/paddleFaster.jpg"> -->
         <p style="font-size:30px">
             <a href="https://twitter.com/TilterWheel"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.facebook.com/pg/Ólta-603176353193572/about/?ref=page_internal"><i id="jv-facebook_alt"
-                    class="jv-facebook_alt"></i></a>
+            <a href="https://www.facebook.com/pg/Ólta-603176353193572/about/?ref=page_internal"><i class="fab fa-facebook-f"></i></a>
         </p>
     </div>
     <div style="text-align:center; color: #131f6b;">
@@ -43,8 +40,7 @@
         <p>Jazz & blues singer/pianist</p>
         <p style="font-size:30px">
             <a href="https://twitter.com/JeremySassoon"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.facebook.com/pg/jeremysassoon/about/?ref=page_internal"><i id="jv-facebook_alt"
-                    class="jv-facebook_alt"></i></a>
+            <a href="https://www.facebook.com/pg/jeremysassoon/about/?ref=page_internal"><i class="fab fa-facebook-f"></i></a>
         </p>
     </div>
     <div class="bandDiv">
@@ -53,8 +49,7 @@
         <p>‘Funked It Up' are a collective of pro musicians from Greater Manchester who deliver Funk, Northern Soul, Motown and other genres...that we've funked up!</p>
         <p style="font-size:30px">
             <a href="https://twitter.com/funkeditupuk "><i class="fab fa-twitter"></i></a>
-            <a href="https://www.facebook.com/pg/funkeditupuk/about/?ref=page_internal"><i id="jv-facebook_alt"
-                    class="jv-facebook_alt"></i></a>
+            <a href="https://www.facebook.com/pg/funkeditupuk/about/?ref=page_internal"><i class="fab fa-facebook-f"></i></a>
         </p>
     </div>
     <div class="bandDiv">
@@ -63,8 +58,7 @@
         <p>Chicago blues to get you off your seat</p>
         <p style="font-size:30px">
             <a href="https://twitter.com/jamesoharaband"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.facebook.com/pg/JamesOHaraBlues/about/?ref=page_internal"><i id="jv-facebook_alt"
-                    class="jv-facebook_alt"></i></a>
+            <a href="https://www.facebook.com/pg/JamesOHaraBlues/about/?ref=page_internal"><i class="fab fa-facebook-f"></i></a>
         </p>
     </div>
     <div style="text-align:center; color: #131f6b;">
@@ -76,8 +70,7 @@
         <p>Swingin' affair is a Manchester based 25 piece big band</p>
         <p style="font-size:30px">
             <a href="https://twitter.com/SwinginAffair"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.facebook.com/pg/SwinginAffair/about/?ref=page_internal"><i id="jv-facebook_alt"
-                    class="jv-facebook_alt"></i></a>
+            <a href="https://www.facebook.com/pg/SwinginAffair/about/?ref=page_internal"><i class="fab fa-facebook-f"></i></a>
         </p>
     </div>
     <div class="bandDiv">
@@ -86,8 +79,7 @@
         <p>Half-Life are a four strong Rock/Metal/Punk covers band guaranteed to get you singing and dancing (or trying to coordinate nodding your head and tapping your foot while holding a pint!) along with well-known tracks from a wide range of artists
             from late 60s Classic Rock to a bucket-load of more modern Noughties floor fillers.</p>
         <p style="font-size:30px">
-            <a href="https://www.facebook.com/pg/HalfLifeCoverBand/about/?ref=page_internal"><i id="jv-facebook_alt"
-                    class="jv-facebook_alt"></i></a>
+            <a href="https://www.facebook.com/pg/HalfLifeCoverBand/about/?ref=page_internal"><i class="fab fa-facebook-f"></i></a>
         </p>
     </div>
     <div class="bandDiv">
@@ -96,8 +88,7 @@
         <p>A marvelously cinematic, atmospheric and energy-filled live band.</p>
         <p style="font-size:30px">
             <a href="https://twitter.com/FishesSleeping"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.facebook.com/pg/Sleeping-With-The-Fishes-138136866269031/about/?ref=page_internal"><i id="jv-facebook_alt"
-                    class="jv-facebook_alt"></i></a>
+            <a href="https://www.facebook.com/pg/Sleeping-With-The-Fishes-138136866269031/about/?ref=page_internal"><i class="fab fa-facebook-f"></i></a>
         </p>
     </div>
 </div>
