--- a/app/views/main.html
+++ b/app/views/main.html
@@ -44,7 +44,7 @@
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </twitter-widget>
     <h4>Press <a href="https://www.youtube.com/watch?v=BdoGr0ocBT4" class="youtubePopup"><i class="fas fa-video"></i></a> to watch our video, or check out our social offerings</h4>
-    <p style="font-size:30px">
+    <p style="font-size:30px;">
         <a href="https://twitter.com/dbf_beer"><i class="fab fa-twitter"></i></a>
         <a href="https://www.facebook.com/pages/Didsbury-Beer-Festival/353791738079986"><i class="fab fa-facebook-f"></i></a>
         <a href="https://www.instagram.com/didsburybeerfestival/"><i class="fab fa-instagram"></i></a>
