Add covid press release

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,44 +1,21 @@
-<div class="row marketing col-md-6 rowCountdown" style="text-align: center;">
+<div class="row marketing col-md-12 rowCountdown" style="text-align: center;">
     <div>
-        <h3>The 12th annual Didsbury Beer Festival</h3>
-        <h3>31st Oct - 2nd Nov 2019</h3>
-        <div class="times col-xs-4">
-            <br>
-            <span>Thursday</span><br><span>7 - 11PM</span><br>
-        </div>
-        <div class="times col-xs-4">
-            <br>
-            <span>Friday</span><br><span>6 - 11PM</span><br>
-        </div>
-        <div class="times col-xs-4">
-            <br>
-            <span>Saturday</span><br><span>12 - 11PM</span><br><br>
-        </div>
-        <span ng-hide='false'>
-            NO ADVANCE TICKETS ARE REQUIRED, £5 CASH OR CARD PAYMENT ON DOOR FOR EACH SESSION. 
-            <br><br>
-            However, there are a few "friends" tickets, which cost £10 cash  and entitle the holder to get into all three sessions. Friends tickets can be bought from MJ Leeming Opticians, School Lane and Reasons to be Cheerful, Fog Lane.
-        </span>
-    </div>
-    <div>
-        <br>
+        <h3>Press Release</h3>
         <p>
-            200+ Beers, Ciders &amp; Perries, with great food &amp; music
+            Didsbury Beer Festival will not take place in 2020!<br><br>
+            In view of the continuing situation with Covid-19, and the uncertainty about when
+            restrictions will be relaxed to allow large gatherings, regrettably there will not be a
+            Didsbury Beer Festival in 2020.<br><br>
+            Hopefully the recent easing of lockdown conditions will continue and we will be able to
+            support our local pubs through the remainder of this year.<br><br>
         </p>
-        <p style="text-align: center">
-            St Catherine's Community Centre<br> School Lane<br> Didsbury
-            <br> Manchester
-            <br> M20 6HS
-        </p>
-        <a id="lnkFind" ng-href="#!/find">Find Us</a>
-        <br>
     </div>
     <h4>Contact us</h4>
     <p>
         For all general enquiries, please email <a href="mailto:emaildbf@gmail.com">emaildbf@gmail.com</a>
     </p>
 </div>
-<div class="row marketing col-md-6" style="padding: 25px; text-align: center;">
+<div class="row marketing col-md-12" style="padding: 25px; text-align: center;">
     <twitter-widget>
         <a class="twitter-timeline" data-width="300" data-height="350" data-theme="light" href="https://twitter.com/dbf_beer?ref_src=twsrc%5Etfw">Tweets by dbf_beer</a>
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
