--- a/app/views/music.html
+++ b/app/views/music.html
@@ -1,5 +1,5 @@
 <div class="row marketing col-md-12">
-    <div style="text-align:center; color: #131f6b;">
+    <div style="text-align:center; color: #0f206c;">
         <h1>Thursday</h1>
     </div>
     <div class="bandDiv">
@@ -31,7 +31,7 @@
             <a href="https://www.facebook.com/pg/Ólta-603176353193572/about/?ref=page_internal"><i class="fab fa-facebook-f"></i></a>
         </p>
     </div>
-    <div style="text-align:center; color: #131f6b;">
+    <div style="text-align:center; color: #0f206c;">
         <h1>Friday</h1>
     </div>
     <div class="bandDiv">
@@ -61,7 +61,7 @@
             <a href="https://www.facebook.com/pg/JamesOHaraBlues/about/?ref=page_internal"><i class="fab fa-facebook-f"></i></a>
         </p>
     </div>
-    <div style="text-align:center; color: #131f6b;">
+    <div style="text-align:center; color: #0f206c;">
         <h1>Saturday</h1>
     </div>
     <div class="bandDiv">
