--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,21 +1,20 @@
 <div class="row marketing col-md-12 rowCountdown" style="text-align: center;">
     <div>
-        <h3>Press Release</h3>
+        <h3>Watch this space!</h3>
+        
         <p>
-            Didsbury Beer Festival will not take place in 2020!<br><br>
-            In view of the continuing situation with Covid-19, and the uncertainty about when
-            restrictions will be relaxed to allow large gatherings, regrettably there will not be a
-            Didsbury Beer Festival in 2020.<br><br>
-            Hopefully the recent easing of lockdown conditions will continue and we will be able to
-            support our local pubs through the remainder of this year.<br><br>
+            We are nearly ready to announce details of the alternative to a 2020 Didsbury Beer Festival.
+            This will be a limited offer including a special 2020 glass.<br><br>
+            Details on how to participate available soon.
         </p>
+        <br>
     </div>
     <h4>Contact us</h4>
     <p>
         For all general enquiries, please email <a href="mailto:emaildbf@gmail.com">emaildbf@gmail.com</a>
     </p>
 </div>
-<div class="row marketing col-md-12" style="padding: 25px; text-align: center;">
+<div class="row marketing col-md-12" style="padding: 5px; text-align: center;">
     <twitter-widget>
         <a class="twitter-timeline" data-width="300" data-height="350" data-theme="light" href="https://twitter.com/dbf_beer?ref_src=twsrc%5Etfw">Tweets by dbf_beer</a>
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
