Added DBF 2020 details to home page

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,13 +1,19 @@
 <div class="row marketing col-md-12 rowCountdown" style="text-align: center;">
     <div>
-        <h3>Watch this space!</h3>
-        
-        <p>
-            We are nearly ready to announce details of the alternative to a 2020 Didsbury Beer Festival.
-            This will be a limited offer including a special 2020 glass.<br><br>
-            Details on how to participate available soon.
-        </p>
         <br>
+        <p>
+            We will soon be providing details of how you can have your own Didsbury Beer Festival at Home in 2020.
+            <br><br> You will have a choice of:
+        </p>
+        <li>A box with a special 2020 glass and 2 specially labelled beers</li>
+        <li>A box with a special 2020 glass, 2 specially labelled beers and 3 other beers from local breweries</li>
+        <br>
+        <p>There will be a very limited supply and you will need to pre-order for collection from St Catherine’s Community Centre.
+            <br><br> We will shortly reveal more details about the beers, how to order these boxes and when they can be collected.
+        </p>
+
+        <p>The Didsbury Beer Festival has always made a significant donation of its surplus to local charities. This year we will donate all the surplus after meeting costs to The Chorlton and Didsbury Foodbank
+            <a href="https://chorltondidsbury.foodbank.org.uk/">https://chorltondidsbury.foodbank.org.uk/</a> There will also be an opportunity to make an extra donation which we will pass directly to the charity. </p>
     </div>
     <h4>Contact us</h4>
     <p>
