Added break point after link

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -13,7 +13,7 @@
         </p>
 
         <p>The Didsbury Beer Festival has always made a significant donation of its surplus to local charities. This year we will donate all the surplus after meeting costs to The Chorlton and Didsbury Foodbank
-            <a href="https://chorltondidsbury.foodbank.org.uk/">https://chorltondidsbury.foodbank.org.uk/</a> There will also be an opportunity to make an extra donation which we will pass directly to the charity. </p>
+            <a href="https://chorltondidsbury.foodbank.org.uk/">https://chorltondidsbury.foodbank.org.uk/</a><br> There will also be an opportunity to make an extra donation which we will pass directly to the charity. </p>
     </div>
     <h4>Contact us</h4>
     <p>
