--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,36 +1,234 @@
-<div class="row marketing col-md-12 rowCountdown" style="text-align: center;">
-    <div>
-        <br>
-        <p>
-            We will soon be providing details of how you can have your own Didsbury Beer Festival at Home in 2020.
-            <br><br> You will have a choice of:
-        </p>
-        <li>A box with a special 2020 glass and 2 specially labelled beers</li>
-        <li>A box with a special 2020 glass, 2 specially labelled beers and 3 other beers from local breweries</li>
-        <br>
-        <p>There will be a very limited supply and you will need to pre-order for collection from St Catherine’s Community Centre.
-            <br><br> We will shortly reveal more details about the beers, how to order these boxes and when they can be collected.
-        </p>
-
-        <p>The Didsbury Beer Festival has always made a significant donation of its surplus to local charities. This year we will donate all the surplus after meeting costs to The Chorlton and Didsbury Foodbank
-            <a href="https://chorltondidsbury.foodbank.org.uk/">https://chorltondidsbury.foodbank.org.uk/</a><br> There will also be an opportunity to make an extra donation which we will pass directly to the charity. </p>
+<div class="row marketing col-md-12 rowCountdown">
+    <div class="col-md-12">
+    <h4 class="centered bold">It's here!</h4>
+    At last, here is the opportunity to buy a box for your Didsbury Beer
+    Festival at Home, to drink at a safe distance or perhaps with friends on a
+    zoom meeting.
+    <br /><br />
+    <h4 class="centered bold">What’s in the box?</h4>
     </div>
-    <h4>Contact us</h4>
-    <p>
-        For all general enquiries, please email <a href="mailto:emaildbf@gmail.com">emaildbf@gmail.com</a>
-    </p>
+    <div class="col-md-4">
+    <img
+        class="optionImage"
+        src="images/dbfHomeOption1.jpeg"
+    />
+    </div>
+    <br />
+    <div class="col-md-8">
+    <span class="indent">
+        <span class="optionText"
+        ><span class="bold">Option1:</span> 2 beers and a glass for
+        £12</span
+        >
+        <br />
+        <span class="indent">
+        &bull;&nbsp;&nbsp;The special 2020 festival glass (pint only)<br />
+        &bull;&nbsp;&nbsp;A Bottle of the traditional festival ale (4%)<br />
+        &bull;&nbsp;&nbsp;A special bottle of 4.1% blond ale (Teresa’s
+        Tipple) to celebrate Teresa Seneviratne, who died earlier this year.
+        She was a founder of the festival and involved in the planning of
+        the first one in 2008. <br />
+        </span>
+        <br />
+        <br />
+    </span>
+    </div>
+    <div class="col-md-4">
+    <img class="optionImage"src="images/dbfHomeOption2.png" />
+    <br />
+    </div>
+    <div class="col-md-8">
+    <br />
+    <span class="indent">
+        <span class="optionText">
+        <span class="bold">Option 2:</span> 5 beers and a glass for
+        £22</span
+        >
+        <br />
+        This bigger box includes the above plus 3 extra beers from local
+        breweries:
+        <br />
+        <span class="indent">
+        &bull; Thirst Class - American Pale Ale 5.3%<br />
+        &bull; Bollington – Oatmeal Stout 5.0%<br />
+        &bull; Track. – Sonoma 3.8%<br />
+        </span>
+    </span>
+    </div>
+    <br />
+    <br />
+    <br />
+    <div class="col-md-12">
+    <h4 class="centered bold">How to order</h4>
+    Order online by clicking on the link below and then collect your order on
+    7th or 14th November from St Catherine’s Community Centre (the home of the
+    Didsbury Beer Festival).
+    <br /><br />
+    There is very limited stock so you will need to be quick.
+    <br /><br />
+    The Didsbury Beer Festival has always supported local good causes. This
+    year all the profit will be supporting those most in need by donating to
+    local food banks - Chorlton and Didsbury Foodbank
+    (https://chorltondidsbury.foodbank.org.uk/). There is also an option to
+    make an additional donation when placing your order.
+    <br /><br />
+    Sales are strictly for over 18s and proof of age will be required on
+    collection
+    <br /><br />
+    Place your order here.
+    </span>
+    <div id="collection-component-1602861537852"></div>
+    
+  <h4 class="centered bold">Contact us</h4>
+  <p>
+    For all general enquiries, please email
+    <a href="mailto:emaildbf@gmail.com">emaildbf@gmail.com</a>
+  </p>
 </div>
-<div class="row marketing col-md-12" style="padding: 5px; text-align: center;">
-    <twitter-widget>
-        <a class="twitter-timeline" data-width="300" data-height="350" data-theme="light" href="https://twitter.com/dbf_beer?ref_src=twsrc%5Etfw">Tweets by dbf_beer</a>
-        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </twitter-widget>
-    <h4>Press <a href="https://www.youtube.com/watch?v=BdoGr0ocBT4" class="youtubePopup"><i class="fas fa-video"></i></a> to watch our video, or check out our social offerings</h4>
-    <p style="font-size:30px;">
-        <a href="https://twitter.com/dbf_beer"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.facebook.com/pages/Didsbury-Beer-Festival/353791738079986"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/didsburybeerfestival/"><i class="fab fa-instagram"></i></a>
-        <a href="http://www.flickr.com/photos/65526946@N08/"><i class="fab fa-flickr"></i></a>
-        <a href="http://www.youtube.com/user/Didsburybeerfestival"><i class="fab fa-youtube"></i></a>
-    </p>
+<div class="row marketing col-md-12" style="padding: 5px; text-align: center">
+  <twitter-widget>
+    <a
+      class="twitter-timeline"
+      data-width="300"
+      data-height="350"
+      data-theme="light"
+      href="https://twitter.com/dbf_beer?ref_src=twsrc%5Etfw"
+      >Tweets by dbf_beer</a
+    >
+    <script
+      async
+      src="https://platform.twitter.com/widgets.js"
+      charset="utf-8"
+    ></script>
+  </twitter-widget>
+  <h4>
+    Press
+    <a href="https://www.youtube.com/watch?v=BdoGr0ocBT4" class="youtubePopup"
+      ><i class="fas fa-video"></i
+    ></a>
+    to watch our video, or check out our social offerings
+  </h4>
+  <p style="font-size: 30px">
+    <a href="https://twitter.com/dbf_beer"><i class="fab fa-twitter"></i></a>
+    <a
+      href="https://www.facebook.com/pages/Didsbury-Beer-Festival/353791738079986"
+      ><i class="fab fa-facebook-f"></i
+    ></a>
+    <a href="https://www.instagram.com/didsburybeerfestival/"
+      ><i class="fab fa-instagram"></i
+    ></a>
+    <a href="http://www.flickr.com/photos/65526946@N08/"
+      ><i class="fab fa-flickr"></i
+    ></a>
+    <a href="http://www.youtube.com/user/Didsburybeerfestival"
+      ><i class="fab fa-youtube"></i
+    ></a>
+  </p>
 </div>
+</div>
+<script type="text/javascript">
+  /*<![CDATA[*/
+  (function () {
+    var scriptURL =
+      "https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js";
+    if (window.ShopifyBuy) {
+      if (window.ShopifyBuy.UI) {
+        ShopifyBuyInit();
+      } else {
+        loadScript();
+      }
+    } else {
+      loadScript();
+    }
+    function loadScript() {
+      var script = document.createElement("script");
+      script.async = true;
+      script.src = scriptURL;
+      (
+        document.getElementsByTagName("head")[0] ||
+        document.getElementsByTagName("body")[0]
+      ).appendChild(script);
+      script.onload = ShopifyBuyInit;
+    }
+    function ShopifyBuyInit() {
+      var client = ShopifyBuy.buildClient({
+        domain: "didsbury-beer-festival.myshopify.com",
+        storefrontAccessToken: "2539fc6b31b5720da9bae86eb5f5f629",
+      });
+      ShopifyBuy.UI.onReady(client).then(function (ui) {
+        ui.createComponent("collection", {
+          id: "224929841318",
+          node: document.getElementById(
+            "collection-component-1602861537852"
+          ),
+          moneyFormat: "%C2%A3%7B%7Bamount%7D%7D",
+          options: {
+            product: {
+              styles: {
+                product: {
+                  "@media (min-width: 601px)": {
+                    "max-width": "calc(25% - 20px)",
+                    "margin-left": "20px",
+                    "margin-bottom": "50px",
+                    width: "calc(25% - 20px)",
+                  },
+                  img: {
+                    height: "calc(100% - 15px)",
+                    position: "absolute",
+                    left: "0",
+                    right: "0",
+                    top: "0",
+                  },
+                  imgWrapper: {
+                    "padding-top": "calc(75% + 15px)",
+                    position: "relative",
+                    height: "0",
+                  },
+                },
+              },
+              text: {
+                button: "Add to cart",
+              },
+            },
+            productSet: {
+              styles: {
+                products: {
+                  "@media (min-width: 601px)": {
+                    "margin-left": "-20px",
+                  },
+                },
+              },
+            },
+            modalProduct: {
+              contents: {
+                img: false,
+                imgWithCarousel: true,
+                button: false,
+                buttonWithQuantity: true,
+              },
+              styles: {
+                product: {
+                  "@media (min-width: 601px)": {
+                    "max-width": "100%",
+                    "margin-left": "0px",
+                    "margin-bottom": "0px",
+                  },
+                },
+              },
+              text: {
+                button: "Add to cart",
+              },
+            },
+            cart: {
+              text: {
+                total: "Subtotal",
+                button: "Checkout",
+              },
+            },
+          },
+        });
+      });
+    }
+  })();
+  /*]]>*/
+</script>
