--- a/app/views/main.html
+++ b/app/views/main.html
@@ -60,7 +60,7 @@
     <br />
     <div class="col-md-12">
     <h4 class="centered bold">How to order</h4>
-    Order online by clicking on the link below and then collect your order on
+    Order online by clicking one of the links below and then collect your order on
     7th or 14th November from St Catherine’s Community Centre (the home of the
     Didsbury Beer Festival).
     <br /><br />
@@ -74,11 +74,8 @@
     <br /><br />
     Sales are strictly for over 18s and proof of age will be required on
     collection
-    <br /><br />
-    Place your order here.
-    </span>
-    <div id="collection-component-1602861537852"></div>
-    
+    <br /><br /><br />
+    <div id='collection-component-1602963986272'></div>
   <h4 class="centered bold">Contact us</h4>
   <p>
     For all general enquiries, please email
@@ -126,109 +123,3 @@
   </p>
 </div>
 </div>
-<script type="text/javascript">
-  /*<![CDATA[*/
-  (function () {
-    var scriptURL =
-      "https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js";
-    if (window.ShopifyBuy) {
-      if (window.ShopifyBuy.UI) {
-        ShopifyBuyInit();
-      } else {
-        loadScript();
-      }
-    } else {
-      loadScript();
-    }
-    function loadScript() {
-      var script = document.createElement("script");
-      script.async = true;
-      script.src = scriptURL;
-      (
-        document.getElementsByTagName("head")[0] ||
-        document.getElementsByTagName("body")[0]
-      ).appendChild(script);
-      script.onload = ShopifyBuyInit;
-    }
-    function ShopifyBuyInit() {
-      var client = ShopifyBuy.buildClient({
-        domain: "didsbury-beer-festival.myshopify.com",
-        storefrontAccessToken: "2539fc6b31b5720da9bae86eb5f5f629",
-      });
-      ShopifyBuy.UI.onReady(client).then(function (ui) {
-        ui.createComponent("collection", {
-          id: "224929841318",
-          node: document.getElementById(
-            "collection-component-1602861537852"
-          ),
-          moneyFormat: "%C2%A3%7B%7Bamount%7D%7D",
-          options: {
-            product: {
-              styles: {
-                product: {
-                  "@media (min-width: 601px)": {
-                    "max-width": "calc(25% - 20px)",
-                    "margin-left": "20px",
-                    "margin-bottom": "50px",
-                    width: "calc(25% - 20px)",
-                  },
-                  img: {
-                    height: "calc(100% - 15px)",
-                    position: "absolute",
-                    left: "0",
-                    right: "0",
-                    top: "0",
-                  },
-                  imgWrapper: {
-                    "padding-top": "calc(75% + 15px)",
-                    position: "relative",
-                    height: "0",
-                  },
-                },
-              },
-              text: {
-                button: "Add to cart",
-              },
-            },
-            productSet: {
-              styles: {
-                products: {
-                  "@media (min-width: 601px)": {
-                    "margin-left": "-20px",
-                  },
-                },
-              },
-            },
-            modalProduct: {
-              contents: {
-                img: false,
-                imgWithCarousel: true,
-                button: false,
-                buttonWithQuantity: true,
-              },
-              styles: {
-                product: {
-                  "@media (min-width: 601px)": {
-                    "max-width": "100%",
-                    "margin-left": "0px",
-                    "margin-bottom": "0px",
-                  },
-                },
-              },
-              text: {
-                button: "Add to cart",
-              },
-            },
-            cart: {
-              text: {
-                total: "Subtotal",
-                button: "Checkout",
-              },
-            },
-          },
-        });
-      });
-    }
-  })();
-  /*]]>*/
-</script>
