add more product info

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -60,11 +60,21 @@
     <br />
     <div class="col-md-12">
     <h4 class="centered bold">How to order</h4>
+    <p class="bold">
+        STOP PRESS. WOW!  We are bowled over by the demand for these products.  These boxes with the Special Beers have nearly all gone.  
+        <br/><br/>
+        Fortunately we do still have some glasses left so we can also offer 2 other options 
+        <br/><br/>
+        Option 1a: 2 beers from local breweries and a 2020 Festival glass  £12
+        <br/>
+        Option2a:  5 beers from local breweries and a 2020 Festival glass  £22
+        <br/>
+        </p>
     Order online by clicking one of the links below and then collect your order on
     7th or 14th November from St Catherine’s Community Centre (the home of the
     Didsbury Beer Festival).
     <br /><br />
-    There is very limited stock so you will need to be quick.
+    There is very <span class="bold">limited</span> stock so you will need to be quick.
     <br /><br />
     The Didsbury Beer Festival has always supported local good causes. This
     year all the profit will be supporting those most in need by donating to
