fix some spacing issues and chorlton food bank link

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -67,7 +67,7 @@
         <br/><br/>
         Option 1a: 2 beers from local breweries and a 2020 Festival glass  £12
         <br/>
-        Option2a:  5 beers from local breweries and a 2020 Festival glass  £22
+        Option 2a:  5 beers from local breweries and a 2020 Festival glass  £22
         <br/>
         </p>
     Order online by clicking one of the links below and then collect your order on
@@ -79,7 +79,7 @@
     The Didsbury Beer Festival has always supported local good causes. This
     year all the profit will be supporting those most in need by donating to
     local food banks - Chorlton and Didsbury Foodbank
-    (https://chorltondidsbury.foodbank.org.uk/). There is also an option to
+    (<a href="https://chorltondidsbury.foodbank.org.uk/">https://chorltondidsbury.foodbank.org.uk/</a>"). There is also an option to
     make an additional donation when placing your order.
     <br /><br />
     Sales are strictly for over 18s and proof of age will be required on
